--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,54 +1,63 @@
+/* Setting height to 100% for html and body elements, and applying a gradient background */
 html,
 body {
   height: 100%;
   background: linear-gradient(120deg, #3897ff, blue);
-  overflow: hidden;
-  background-size: cover;
+  overflow: hidden; /* Preventing overflow */
+  background-size: cover; /* Ensuring background covers the entire viewport */
 }
 
+/* Styling for the container holding the game content */
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 25px;
-  font-family: Arial, Helvetica, sans-serif;
+  display: flex; /* Displaying as flex container */
+  flex-direction: column; /* Stacking children vertically */
+  align-items: center; /* Centering horizontally */
+  justify-content: center; /* Centering vertically */
+  font-size: 25px; /* Setting font size */
+  font-family: Arial, Helvetica, sans-serif; /* Setting font family */
 }
 
+/* Styling for the status bars */
 .bar {
-  display: flex;
-  color: white;
-  width: 700px;
+  display: flex; /* Displaying as flex container */
+  color: white; /* Setting text color */
+  width: 700px; /* Setting width */
 }
 
+/* Styling for images within the status bars */
 .bar img {
-  width: 25px;
+  width: 25px; /* Setting width */
 }
 
+/* Styling for the game canvas */
 #gameCanvas {
-  border: 1px solid black;
-  margin-top: 20px;
-  background-image: url("Images/Background/background.png");
-  box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.404);
+  border: 1px solid black; /* Setting border */
+  margin-top: 20px; /* Adding top margin */
+  background-image: url("Images/Background/background.png"); /* Setting background image */
+  box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.404); /* Adding box shadow */
 }
 
+/* Styling for individual status bars */
 #hp,
 #bullets,
 #score {
-  margin-left: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  margin-left: 20px; /* Adding left margin */
+  display: flex; /* Displaying as flex container */
+  align-items: center; /* Centering vertically */
+  justify-content: space-around; /* Distributing space evenly */
 }
 
+/* Styling for HP status bar */
 #hp {
-  width: 100px;
+  width: 100px; /* Setting width */
 }
 
+/* Styling for bullets status bar */
 #bullets {
-  width: 200px;
+  width: 200px; /* Setting width */
 }
 
+/* Styling for score status bar */
 #score {
-  width: 140px;
+  width: 140px; /* Setting width */
 }
